<resources>
    <string name="app_name">SaludEnMarcha</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="login">LOGIN</string>
    <string name="account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="mas">Más</string>
    <string name="logout">Logout</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="navigate_back">Navigate back</string>
    <string name="usuario_creado">Usuario creado</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="anadir">Añadir</string>
    <string name="tarea_anadida">Tarea añadida</string>
    <string name="cancelar">Cancelar</string>
    <string name="done">Done</string>
    <string name="recupera_tu_contrasena">Restablece tu contraseña</string>
    <string name="enviar_enlace">Enviar enlace</string>
    <string name="texto_recuperar">Te enviaremos un link al correo asociado a tu cuenta para que puedas restablecer tu contraseña</string>
    <string name="icono_lock">icono lock</string>
    <string name="link_enviado">Link enviado</string>
    <string name="salud_en_marcha">Salud en Marcha</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="icono_de_google">icono de Google</string>
    <string name="actualizar_tarea">Actualizar tarea</string>
    <string name="guardar">Guardar</string>
    <string name="tarea_actualizada">Tarea actualizada</string>
    <string name="fallo_actualizar_tarea">Fallo al actualizar</string>
    <string name="default_web_client_id" translatable="false">194834969977-2e450jonp4tm6il5hmqdqbicatec31jv.apps.googleusercontent.com</string>
    <string name="error_mail_vacio">El campo email no puede estar vacío</string>
    <string name="fallo_tarea">Fallo al crear tarea</string>
    <string name="autenticacion_fallida">Autenticación fallida</string>
    <string name="introduce_email_contrasena">Introduce Email y contraseña</string>
    <string name="fallo_inesperado">Fallo inesperado</string>
    <string name="email_invalido">Formato de email inválido</string>
    <string name="campo_obligatorio">Este campo no puede estar vacío</string>
    <string name="tarea_vacia">La tarea no puede estar vacía</string>
    <string name="formato_correo_incorrecto">Formato de correo incorrecto</string>
    <string name="botonAndar">Andar</string>
    <string name="botonCorrer">Correr</string>
    <string name="botonCiclismo">Ciclismo</string>
    <string name="botonVolver">Volver</string>
    <string name="tituloMenuActividad">Selecciona una actividad</string>
    <string name="tituloResumenActividad">Resumen Actividad</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="desayuno">Desayuno:</string>
    <string name="logo">Logo</string>
    <string name="comida">Almuerzo:</string>
    <string name="cena">Cena:</string>
    <string name="grafica">Gráfica</string>
    <string name="peso">Peso:</string>
    <string name="peso_">Peso</string>
    <string name="nombre_medicaci_n">Nombre medicación:</string>
    <string name="dosis">Dosis:</string>
    <string name="historial_de_alimentaci_n">Historial de Alimentación</string>
    <string name="resumen_actividad_del_d_a_seleccionado">Resumen actividad del día seleccionado:</string>
    <string name="eliminar_actividad">Eliminar actividad</string>
    <string name="detalles_de_la_actividad">DETALLES DE LA ACTIVIDAD</string>
    <string name="solo_usar_en_caso_de_emergencia_real">Solo usar en caso de emergencia real</string>
    <string name="llamar_112">Llamar 112</string>
    <string name="glucosa_">Glucosa</string>
    <string name="creado_por_alejandro_aguiar_y_alberto_arroyo">Creado por Alejandro Aguiar y Alberto Arroyo</string>
    <string name="actividad">Actividad</string>
    <string name="nutrici_n">Nutrición</string>
    <string name="historial">Historial</string>
    <string name="medicaci_n">Medicación</string>
    <string name="pa_fc">PA - FC</string>
    <string name="calendario">Calendario</string>
    <string name="sos">SOS</string>
    <string name="resumen">Resumen</string>
    <string name="darkmode">darkmode</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="volver">Volver</string>
    <string name="sist_lica_mmhg">Sistólica (mmHg)</string>
    <string name="pulso_ppm">Pulso ppm:</string>
    <string name="diast_lica_mmhg">Diastólica (mmHg)</string>
    <string name="glucosa">Glucosa:</string>
    <string name="share_text">*Mantén pulsado para compartir</string>

</resources>