<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadMenuActivity">

    <Button
        android:id="@+id/buttonAndar"
        style="@style/MyButtonStyle"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="160dp"
        android:drawableLeft="@drawable/ic_walk"
        android:text="@string/botonAndar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonCorrer"
        style="@style/MyButtonStyle"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:drawableLeft="@drawable/ic_run"
        android:text="@string/botonCorrer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAndar"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonCiclismo"
        style="@style/MyButtonStyle"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:drawableLeft="@drawable/ic_bike"
        android:text="@string/botonCiclismo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCorrer"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonVolver"
        style="@style/MyButtonStyleVolver"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:text="@string/botonVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCiclismo"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/font_logo"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/tituloMenuActividad"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>