<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GlucosaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="164dp"
                android:layout_height="103dp"
                android:layout_marginTop="80dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/date_picker_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/app_icon"
                android:contentDescription="@string/logo" />

            <Button
                style="@style/MyButtonStyle"
                android:id="@+id/glucosa_picker_button"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="50dp"
                android:text="@string/seleccionar_fecha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageView3" />

            <EditText
                android:id="@+id/glucosa_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:inputType="number"
                style="@style/CajaTexto"
                android:hint="@string/glucosa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_picker_button"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />


            <Button
                android:id="@+id/buttonSaveGlucosa"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                style="@style/MyButtonStyle"
                android:text="@string/guardar" />
            <Button
                android:id="@+id/graficaGlucosaButton"
                style="@style/MyButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/grafica" />


            <Button
                android:id="@+id/volverGlucosaButton"
                style="@style/MyButtonStyleVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/botonVolver"
                tools:ignore="TextContrastCheck" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <com.anychart.AnyChartView
                    android:id="@+id/any_chart_glucosa"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>