<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyActivity">

    <TextView
        android:id="@+id/textEmergencyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solo_usar_en_caso_de_emergencia_real"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonCall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="222dp"
        android:layout_height="91dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:text="@string/llamar_112"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="128dp"
        android:layout_height="48dp"
        style="@style/MyButtonStyle"
        android:text="@string/botonVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCall" />
</androidx.constraintlayout.widget.ConstraintLayout>